--- a/cgi-bin/dataView/CMakeLists.txt
+++ b/cgi-bin/dataView/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 set(SOURCE_FILES main.c ../../source/io_func.c)
 set(EXECUTABLE_OUTPUT_PATH "../")
 add_executable(data_view ${SOURCE_FILES})
+target_link_libraries(data_view mysqlclient)
